# cperllexer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .perltoc.c  CMakeLists.txt  Makefile  Readme.md  actualcontent.h  binary.regex  callout.c  ccompiler.sln  ccompiler.vcxproj  ccompiler.vcxproj.filters  compile_commands.json  cparser2.sln  cparser2.vcxproj  cparser2.vcxproj.filters  cpphelper.cpp  debugger.c  debugger.sln  debugger.vcxproj  debugger.vcxproj.filters  faster.regex  faster.regex.pl  fasterlight.regex  idamain.cpp  inner.regex  main.c  main.h  main.pl  main.regex  maintest.c  namedcapture.c  parse.pl  perltoc.xs  primexpr.regex  primexpr.regex.pl  so.c  start.idc  (+9 more)
.github/workflows/: cmake.yml
idaplugin/: idamain.cpp
lib/: pcre2-8.lib
llvm/: llvmgen.cpp  llvmgen.h
metaregex/: parseregexfile.c  parseregexfilecpp.cpp  regex.regex
misc/: extractfns.pm  preprocess.pl
regexes/: binary.regex  identifier.regex  inner.regex  main.regex  parse.pl  primexpr.regex  regexmeta.regex  statement.regex  typename.regex  unary.regex
regexes/supplement/: binary.regex.pl  primexpr.regex.pl  typename.regex.pl
src/: cprogram.pm  extractfns.pm  main.c  main.h  main.pl  perltoc.xs  typedefs.pm  typename.pm
supplement/: fixuperrors.pl  parsedecls.pl  parsedefs.pl  parsetxtdecls.pl  splitfunctions.pl
tests/: test.c  test.test.c  test.test.ida.c
utility/: parseregexfile_deprecated.c  utility.cpp
